--- a/idex.html
+++ b/idex.html
@@ -6,14 +6,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        #square {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background: red;
+            width: 50px;
+            height: 50px;
+            margin: 50px;
+        }
+
+        button {
+            align-items: center;
+            justify-content: center;
+            display: flex;
+            text-align: center;
+        }
+    </style>
 </head>
 
 <body>
     <h1>java script</h1>
+    <button onclick="revealmessage()">click me!</button>
+    <p id="hiddenmessage" style="display: none;">you are awsome</p>
 
+    <div id="square"></div>
 
-
-
+    <button onclick="changesquare()">Change Me!</button>
 
 
 
