--- a/idex.html
+++ b/idex.html
@@ -28,12 +28,12 @@
 
 <body>
     <h1>java script</h1>
-    <button onclick="revealmessage()">click me!</button>
+    <button onclick="revealmessage()">Button</button>
     <p id="hiddenmessage" style="display: none;">you are awsome</p>
 
     <div id="square"></div>
 
-    <button onclick="changesquare()">Change Me!</button>
+    <button onclick="changesquare()">Another Button</button>
 
 
 
