changing button names

--- a/idex.html
+++ b/idex.html
@@ -7,6 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
+        :root {
+            --prim-color: #290853;
+            --sec-color: #692d00;
+            --accent-color: #004848;
+        }
+
         #square {
             display: flex;
             align-items: center;
