--- a/idex.html
+++ b/idex.html
@@ -11,6 +11,9 @@
             --prim-color: #290853;
             --sec-color: #692d00;
             --accent-color: #004848;
+            background-image: linear-gradient(90deg, var(--prim-color), var(--accent-color));
+            color: whitesmoke;
+            text-align: center;
         }
 
         #square {
